# rust-base-web-scraper

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  test-crawl.sh
migrations/: 001_init.sql
scripts/: docker-publish.sh
src/: config.rs  crawler.rs  db.rs  error.rs  main.rs  metadata.rs  pdf.rs  proxy.rs  queue.rs  stealth.rs  worker.rs
src/api/: handlers.rs  mod.rs  models.rs
web/: Dockerfile  components.json  next.config.mjs  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/job/[id]/: page.tsx
web/app/new/: page.tsx
web/app/playground/: page.tsx
web/app/queue/: page.tsx
web/app/system/: page.tsx
web/components/: app-sidebar.tsx  job-table.tsx  markdown-viewer.tsx  new-job-form.tsx  stats-cards.tsx  status-badge.tsx
web/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  scroll-area.tsx  select.tsx  slider.tsx  sonner.tsx  table.tsx  tabs.tsx  tooltip.tsx
web/hooks/: use-mobile.ts
web/lib/: api.ts
