[package]
name = "spider-web-crawler"
version = "0.2.0"
edition = "2021"
description = "Production-grade web scraping API with stealth browser automation, background job processing, and real-time dashboard"
license = "MIT"
repository = "https://github.com/theetaz/rust-base-web-scraper"
authors = ["Nipun Theekshana <theekshana2@gmail.com>"]

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database & Queue
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
redis = { version = "0.27", features = ["tokio-comp", "aio"] }

# IDs & Time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling & Logging
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Browser & Crawling
headless_chrome = "1"
spider = "2"
spider_transformations = "2"
scraper = "0.19"
url = "2"
rand = "0.8"
